Update 4-Fun ZDD 25.01.lflist.conf

--- a/4-Fun ZDD 25.01.lflist.conf
+++ b/4-Fun ZDD 25.01.lflist.conf
@@ -36,6 +36,7 @@
 47961808 0 --Barrier Statue of the Inferno
 73356503 0 --Barrier Statue of the Stormwinds
 10963799 0 --Barrier Statue of the Torrent
+90241276 0 --Snake-Eyes Populus
 7563579 0 --Performage Plushfire
 94853057 0 --Banisher of the Radiance
 25131968 0 --Ken the Warrior Dragon
