Update 4-Fun ZDD 25.01.lflist.conf

--- a/4-Fun ZDD 25.01.lflist.conf
+++ b/4-Fun ZDD 25.01.lflist.conf
@@ -170,6 +170,7 @@
 74920585 0 --Tearlaments Sulliek
 80604091 0 --Ultimate Offering
 5851097 0 --Vanity's Emptiness
+48716527 0 --The Monarchs Erupt
 #limited
 7902349 1 --Left Arm of the Forbidden One
 44519536 1 --Left Leg of the Forbidden One
