Update 4-Fun ZDD 25.01.lflist.conf

--- a/4-Fun ZDD 25.01.lflist.conf
+++ b/4-Fun ZDD 25.01.lflist.conf
@@ -251,6 +251,7 @@
 75500286 1 --Gold Sarcophagus
 18144506 1 --Harpie's Feather Duster
 19613556 1 --Heavy Storm
+84171830 1 --Domain of the True Monarchs
 1845204 1 --Instant Fusion
 45065541 1 --Mannadium Abscission
 83764718 1 --Monster Reborn
