Update 4-Fun ZDD 25.01.lflist.conf

--- a/4-Fun ZDD 25.01.lflist.conf
+++ b/4-Fun ZDD 25.01.lflist.conf
@@ -81,6 +81,8 @@
 88581108 0 --True King of All Calamities
 15939229 0 --D/D/D Duo-Dawn King Kali Yuga
 48626373 0 --Kashtira Arise-Heart
+74294676 0 --Evolzar Laggia
+42752141 0 --Evolzar Dolkka
 95474755 0 --Number 89: Diablosis the Mind Hacker
 83827392 0 --Expurrely Noir
 10389142 0 --Number 42: Galaxy Tomahawk
@@ -222,6 +224,7 @@
 26118970 1 --Red Rose Dragon
 13533678 1 --Spright Jet
 76145933 1 --Spright Blue
+44335251 1 --Souleating Oviraptor
 74078255 1 --Tearlaments Merrli
 92919429 1 --Diviner of the Herald
 93454062 1 --Naturia Mole Cricket
@@ -257,6 +260,7 @@
 83764718 1 --Monster Reborn
 2295440 1 --One for One
 84211599 1 --Pot of Prosperity
+38179121 1 --Double Evolution Pill
 32807846 1 --Reinforcement of the Army
 3285551 1 --Rite of Aramesir
 24940422 1 --Sekka's Light
