Update 4-Fun ZDD 25.01.lflist.conf

--- a/4-Fun ZDD 25.01.lflist.conf
+++ b/4-Fun ZDD 25.01.lflist.conf
@@ -15,6 +15,7 @@
 55204071 0 --Gimmick Puppet Nightmare
 72270339 0 --Diabellstar the Black Witch
 91258852 0 --SPYRAL Master Plan
+32181268 0 --Amano-Iwato
 47084486 0 --Vanity's Fiend
 32687071 0 --Amorphage Sloth
 35984222 0 --Ido the Supreme Magical Force
