Update 4-Fun ZDD 25.01.lflist.conf

--- a/4-Fun ZDD 25.01.lflist.conf
+++ b/4-Fun ZDD 25.01.lflist.conf
@@ -21,6 +21,7 @@
 35984222 0 --Ido the Supreme Magical Force
 91800273 0 --Dimension Shifter
 20292186 0 --Artifact Scythe
+33746252 0 --Majesty's Fiend
 9929398 0 --Blackwing - Gofu the Vague Shadow
 15397015 0 --Inspector Boarder
 45041488 0 --Koa'ki Meiru Guardian
