Update 4-Fun ZDD 28.01.lflist.conf

--- a/4-Fun ZDD 28.01.lflist.conf
+++ b/4-Fun ZDD 28.01.lflist.conf
@@ -103,6 +103,7 @@
 98095162 0 --Curious, the Lightsworn Dominion
 72330894 0 --Simorgh, Bird of Sovereignty
 61665245 0 --Summon Sorceress
+86346643 0 --Rainbow Neos
 26692769 0 --The Phantom Knights of Rusty Bardiche
 24269961 0 --Unchained Soul Lord of Yama
 59934749 0 --Isolde, Two Tales of the Noble Knights
