Update 4-Fun ZDD 28.01.lflist.conf

--- a/4-Fun ZDD 28.01.lflist.conf
+++ b/4-Fun ZDD 28.01.lflist.conf
@@ -12,6 +12,7 @@
 55204071 0 --Gimmick Puppet Nightmare
 72270339 0 --Diabellstar the Black Witch
 91258852 0 --SPYRAL Master Plan
+27204311 0 --Nibiru, the Primal Being
 33746252 0 --Majesty's Fiend
 47084486 0 --Vanity's Fiend
 32687071 0 --Amorphage Sloth
@@ -204,6 +205,7 @@
 44335251 1 --Souleating Oviraptor
 572850 1 --Tearlaments Scheiren
 14536035 1 --Dark Grepher
+82385847 1 --Dinowrestler Pankratops
 65734501 1 --Rescue-ACE Air Lifter
 20001443 1 --Swordsoul of Mo Ye
 99234526 1 --White Dragon Wyverburster
@@ -265,6 +267,8 @@
 3285551 1 --Rite of Aramesir
 24940422 1 --Sekka's Light
 71344451 1 --Slash Draw
+24508238 1 --Lightning Storm
+45986603 1 --Snatch Steal
 56465981 1 --Swordsoul Emergence
 73628505 1 --Terraforming
 91623717 1 --Chain Strike
@@ -292,7 +296,6 @@
 24207889 1 --There Can Be Only One
 23002292 1 --Red Reboot
 #semi-limited
-27204311 2 --Nibiru, the Primal Being
 28692962 2 --Mekk-Knight Purple Nightfall
 20537097 2 --Mekk-Knight Blue Sky
 87209160 2 --Tri-Brigade Fraktall
@@ -300,5 +303,4 @@
 4031928 2 --Change of Heart
 24224830 2 --Called by the Grave
 57103969 2 --Fire Formation - Tenki
-45986603 2 --Snatch Steal
 47679935 2 --Magical Meltdown
